force-app/main/default/internal-components/lwc/crmMessagingThreadViewer/newDesignTemplate.css
.scroller {
    height: 35vh;
    overflow-y: scroll;
}

.colorOverwrite {
    background-color: var(--overwrite-header-color, white);
    color: black;
}

.toolbar {
    display: block;
    border: 0;
}

.englishBtn {
    min-height: 1rem;
}

@media only screen and (max-width: 2200px) {
    .case-responsive-button {
        height: 3rem; /* Set a fixed height for buttons on smaller screens */
        line-height: 1; /* Reduce space between lines on smaller screens */
    }
}

@media only screen and (max-width: 1920px) {
    .thread-responsive-button {
        height: 3rem;
        line-height: 1;
    }
}

